<resources>

    <string name="app_name">NMM</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="password_confirmation">Password Confirmation</string>
    <string name="sign_up">Sign up</string>
    <string name="send">Send</string>
    <string name="start_game">Start Game</string>
    <string name="login">Login</string>
    <string name="join_game">Join Game</string>

</resources>